fix(toc): 🐛 invisible toc icons on desktop

--- a/resources/skins.citizen.styles/components/TableOfContents.less
+++ b/resources/skins.citizen.styles/components/TableOfContents.less
@@ -238,6 +238,10 @@
 			> * {
 				opacity: 1;
 			}
+
+			.citizen-ui-icon {
+				content-visibility: visible;
+			}
 		}
 
 		// Hide button in desktop viewport
